Fixes issue 13, broken layout on input

--- a/public/stylesheets/cms.scss
+++ b/public/stylesheets/cms.scss
@@ -196,7 +196,8 @@ table.cms-articles .icon:hover {
 }
 
 .publish-targets div.publish-article-title, .publish-targets .description {
-  width: 384px;
+  width: 100%;
+  margin-bottom: 10px;
   margin-top: 2px;
 }
 
